--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "files.eol": "\n",
   "editor.tabSize": 2,
+  "prettier.prettierPath": "node_modules/prettier",
   "stylelint.validate": ["css", "less", "postcss"],
   "typescript.enablePromptUseWorkspaceTsdk": true
 }
